# Python_Web_HW9

./: README.md  app.py  authors_scrapy.json  main.py  models.py  pyproject.toml  scraper_bs4.py  seeds.py
